# flatness_probe_simulation

./: CMakeLists.txt  README.md  main.cpp
data/: probe_report_face_0.txt  probe_report_face_1.txt  probe_report_face_2.txt  probe_report_face_3.txt  probe_report_face_4.txt  probed_points.ply  top_face_0.ply  top_face_1.ply  top_face_2.ply  top_face_3.ply  top_face_4.ply
